Rettet placering af prisskilt

--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -26,7 +26,8 @@
         <a class="position-absolute logo-placering" href="index.html">
             <img src="images/Logo-Design.png" alt="Logo" width="160">
         </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,7 +61,10 @@
 
 <div class="TekstForside px-lg-5">
     <h1 class="Introtekst">PRODUKTER // DET BØRNEVENLIGE</h1>
-    <p class="TekstForside-paragraph py-lg-3">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+    <p class="TekstForside-paragraph py-lg-3">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og
+        tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det
+        eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi
+        fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
 <div class="card-group px-3 px-lg-5 py-5">
@@ -68,25 +72,49 @@
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3 px-lg-2">Chokoladeknapper</h4>
-                <p class="produktantal px-lg-2">1 pose.</p>
-                <span role="button" class="billede-knap">39 kr.</span>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Chokoladeknapper</h4>
+                        <p class="produktantal px-lg-2">1 pose.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">39 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
+        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Dessertchokolader.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Choco Cloud</h4>
-                <p class="produktantal">8 stk.</p>
-                <span role="button" class="billede-knap">49 kr.</span>
+                <img src="images/ChocoCloud.png" class="card-img-top px-lg-2" alt="chokolade">
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Choco Cloud</h4>
+                        <p class="produktantal px-lg-2">10 stk.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">49 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
+        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Mælkechokolade</h4>
-                <p class="produktantal">12 stk.</p>
-                <span role="button" class="billede-knap">99,95 kr.</span>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Mælkechokolade</h4>
+                        <p class="produktantal px-lg-2">12 stk.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">99,95 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
