--- a/kontaktform.html
+++ b/kontaktform.html
@@ -34,7 +34,8 @@
         <a class="position-absolute logo-placering" href="index.html">
             <img src="images/Logo-Design.png" alt="Logo" width="160">
         </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -67,24 +68,32 @@
 </div>
 
 <!-- Kontakt form -->
-<div class="container2">
-    <div class="kontakttekst">
-        <h2>Kontakt Os</h2>
-        <p>Kom forbi butikken og sig hej eller smid os en besked:</p>
-    </div>
-    <div class="row2">
-        <div class="column2">
-            <form action="">
+<div class="container">
+
+    <form action="">
+        <div class="row p-3">
+            <div class="col-12 kontakttekst">
+                <h2>Kontakt Os</h2>
+                <p>Besked</p>
+            </div>
+            <div class="col-12">
                 <label for="navn">Navn</label>
                 <input type="text" id="navn" name="fornavn" placeholder="Dit navn...">
+            </div>
+            <div class="col-12">
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Din email...">
+            </div>
+            <div class="col-12">
                 <label for="emne">Emne</label>
                 <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:170px"></textarea>
+            </div>
+            <div class="col-12">
                 <input type="submit" value="Submit">
-            </form>
+            </div>
         </div>
-    </div>
+</div>
+</form>
 </div>
 <!-- Kontakt form slut -->
 
