Oprettet forside igen

--- a/kontaktform.html
+++ b/kontaktform.html
@@ -71,10 +71,9 @@
 <div class="container">
 
     <form action="">
-        <div class="row p-3">
-            <div class="col-12 kontakttekst">
-                <h2>Kontakt Os</h2>
-                <p>Besked</p>
+        <div class="row p-3 px-lg-5 py-lg-5 kontaktformtekst">
+            <div class="col-12 kontakttekst py-3">
+                <h1>Kontakt os</h1>
             </div>
             <div class="col-12">
                 <label for="navn">Navn</label>
@@ -89,7 +88,7 @@
                 <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:300px"></textarea>
             </div>
             <div class="col-12">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Send besked">
             </div>
         </div>
     </form>
