--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Information om copyright">
 
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/Produktsider.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -56,37 +56,36 @@
 </nav>
 
 <div class="hero-image">
+    <div class="hero-text">
+        <h1 style="font-size:50px">Chokolade til enhver smag</h1>
+        <br>
+        <button>Læs mere</button>
+    </div>
 </div>
 
-<div class="TekstForside px-lg-5">
-    <h1 class="Introtekst">PRODUKTER // DET BØRNEVENLIGE</h1>
-    <p class="TekstForside-paragraph py-lg-3">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+<div class="TekstForside">
+    <h1 class="Introtekst">Hvem er vi?</h1>
+    <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
 <div class="card-group px-3 px-lg-5 py-5">
     <div class="row g-3">
-        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3 px-lg-2">Chokoladeknapper</h4>
-                <p class="produktantal px-lg-2">1 pose.</p>
-                <span role="button" class="billede-knap">39 kr.</span>
+        <div class="col col-md-12 col-lg-4">
+            <div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
+                <img src="images/ForsideBarn.png" class="card-img-top" alt="chokolade">
+                <a href="Produkt-Børnevenligt.html"><span role="button" class="billede-knap">BØRNEVENLIGE</span></a>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Dessertchokolader.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Choco Cloud</h4>
-                <p class="produktantal">8 stk.</p>
-                <span role="button" class="billede-knap">49 kr.</span>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card border-0 position-relative ">
+                <img src="images/Dessertchokolader.png" class="card-img-top" alt="chokolade">
+                <a href="Produkt-Eksklusive.html"><span role="button" class="billede-knap">EKSKLUSIVE</span></a>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Mælkechokolade</h4>
-                <p class="produktantal">12 stk.</p>
-                <span role="button" class="billede-knap">99,95 kr.</span>
+        <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
+            <div class="card border-0 position-relative">
+                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENEHDER</span></a>
             </div>
         </div>
     </div>
@@ -103,7 +102,7 @@
             <a class="link-1" href="#">HJEM</a>
             <a href="#">OM OS</a>
             <a href="#">KONTAKT</a>
-            <a href="#">SHOP</a>
+            <a href="Checkout.html">DIN KURV</a>
         </p>
         <p>CHOCOLATE CLUB &copy; 2022</p>
     </div>
