Størrelse på tekst

--- a/kontaktform.html
+++ b/kontaktform.html
@@ -73,7 +73,7 @@
     <form action="">
         <div class="row p-3 px-lg-5 py-lg-5 kontaktformtekst">
             <div class="col-12 kontakttekst py-3">
-                <h1>Kontakt os</h1>
+                <h1 class="Introtekst">Kontakt os</h1>
             </div>
             <div class="col-12">
                 <label for="navn">Navn</label>
