Kontaktform placering, tekststørrelser og farver

--- a/kontaktform.html
+++ b/kontaktform.html
@@ -75,20 +75,20 @@
             <div class="col-12 kontakttekst py-3">
                 <h1 class="Introtekst">Kontakt os</h1>
             </div>
-            <div class="col-12">
+            <div class="col-12 kontaktform-overskrifter">
                 <label for="navn">Navn</label>
                 <input type="text" id="navn" name="fornavn" placeholder="Dit navn...">
             </div>
-            <div class="col-12">
+            <div class="col-12 kontaktform-overskrifter">
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Din email...">
             </div>
-            <div class="col-12">
+            <div class="col-12 kontaktform-overskrifter">
                 <label for="emne">Emne</label>
                 <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:300px"></textarea>
             </div>
-            <div class="col-12">
-                <input type="submit" value="Send besked">
+            <div class="col-12 kontaktform-overskrifter">
+                <input style="text-transform: uppercase" type="submit" class="bg-mørkeBrun" value="Send besked">
             </div>
         </div>
     </form>
