Eksklusive produkter og knapper

--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -68,25 +68,49 @@
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/FyldteChokoEksklusiv.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3 px-lg-2">Fyldte chokolader</h4>
-                <p class="produktantal px-lg-2">24 stk.</p>
-                <span role="button" class="billede-knap">149 kr.</span>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
+                        <p class="produktantal px-lg-2">24 stk.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">149 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
+        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Chocobombs.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Chocobombs</h4>
-                <p class="produktantal">4 stk.</p>
-                <span role="button" class="billede-knap">199 kr.</span>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Choco Bomb</h4>
+                        <p class="produktantal px-lg-2">4 stk.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">199 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
+        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Gaveæske.png" class="card-img-top px-lg-2" alt="chokolade">
-                <h4 class="py-3">Gaveæske</h4>
-                <p class="produktantal">1 stk.</p>
-                <span role="button" class="billede-knap">399 kr.</span>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4 class="produkttekst py-3 px-lg-2">Gaveæske</h4>
+                        <p class="produktantal px-lg-2">1 stk.</p>
+                    </div>
+
+                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                        <span role="button" class="billede-knap">399 kr.</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
