Rettet padding og fonts

--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -74,9 +74,9 @@
                 <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Chokoladeknapper</h4>
-                        <p class="produktantal px-lg-2">1 pose.</p>
+                        <p class="px-lg-2">1 pose.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
@@ -90,9 +90,9 @@
                 <img src="images/ChocoCloud.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Choco Cloud</h4>
-                        <p class="produktantal px-lg-2">10 stk.</p>
+                        <p class="px-lg-2">10 stk.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
@@ -106,9 +106,9 @@
                 <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Mælkechokolade</h4>
-                        <p class="produktantal px-lg-2">12 stk.</p>
+                        <p class="px-lg-2">12 stk.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
