--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -70,9 +70,9 @@
                 <img src="images/Chokoladefontæne.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Lej en Chokoladefontæne</h4>
-                        <p class="produktantal px-lg-2">1 stk.</p>
+                        <p class="px-lg-2">1 stk.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
@@ -86,9 +86,9 @@
                 <img src="images/Jordbær.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Chokoladeovertrukne jordbær</h4>
-                        <p class="produktantal px-lg-2">8 stk.</p>
+                        <p class=" px-lg-2">8 stk.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
@@ -102,9 +102,9 @@
                 <img src="images/FyldteChokolader.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
-                        <p class="produktantal px-lg-2">18 stk.</p>
+                        <p class="px-lg-2">18 stk.</p>
                     </div>
 
                     <div class="col-4 d-flex justify-content-end align-items-end ">
