Kontaktform link building

--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">OM OS</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">KONTAKT</a>
+                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
                     <a class="nav-link" href="Checkout.html">DIN KURV</a>
@@ -74,12 +74,12 @@
                 <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Chokoladeknapper</h4>
                         <p class="px-lg-2">1 pose.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">39 kr.</span>
                     </div>
                 </div>
@@ -90,12 +90,12 @@
                 <img src="images/ChocoCloud.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Choco Cloud</h4>
                         <p class="px-lg-2">10 stk.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">49 kr.</span>
                     </div>
                 </div>
@@ -106,12 +106,12 @@
                 <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Mælkechokolade</h4>
                         <p class="px-lg-2">12 stk.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">99,95 kr.</span>
                     </div>
                 </div>
