--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="#">OM OS</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">KONTAKT</a>
+                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
                     <a class="nav-link" href="Checkout.html">DIN KURV</a>
@@ -70,12 +70,12 @@
                 <img src="images/Chokoladefontæne.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Lej en Chokoladefontæne</h4>
                         <p class="px-lg-2">1 stk.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">499 kr.</span>
                     </div>
                 </div>
@@ -86,12 +86,12 @@
                 <img src="images/Jordbær.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Chokoladeovertrukne jordbær</h4>
                         <p class=" px-lg-2">8 stk.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">99 kr.</span>
                     </div>
                 </div>
@@ -102,12 +102,12 @@
                 <img src="images/FyldteChokolader.png" class="card-img-top px-lg-2" alt="chokolade">
 
                 <div class="row">
-                    <div class="col-8 produkttekst">
+                    <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
                         <p class="px-lg-2">18 stk.</p>
                     </div>
 
-                    <div class="col-4 d-flex justify-content-end align-items-end ">
+                    <div class="col-5 d-flex justify-content-end align-items-end ">
                         <span role="button" class="billede-knap">149 kr.</span>
                     </div>
                 </div>
