--- a/kontaktform.html
+++ b/kontaktform.html
@@ -54,7 +54,7 @@
                     <a class="nav-link" href="#">OM OS</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">KONTAKT</a>
+                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
                 </li>
                 <li class="nav-item text-end px-lg-3">
                     <a class="nav-link" href="Checkout.html">DIN KURV</a>
