Tekst på undersider

--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -60,7 +60,10 @@
 
 <div class="TekstForside px-lg-5">
     <h1 class="Introtekst">PRODUKTER // DET EKSKLUSIVE</h1>
-    <p class="TekstForside-paragraph py-lg-3">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+    <p class="TekstForside-paragraph py-lg-3">Vores eksklusive og fantastiske chokolader er til dig der ønsker den bedste smagsoplevelse.
+        Chokoladerne er lavet på lækre kvalitetsprodukter.
+        Herudover er de håndlavede, så både det indre og ydre spiller.
+    </p>
 </div>
 
 <div class="card-group px-3 px-lg-5 py-5">
