Rettet knapper på siden

--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -71,7 +71,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Chokoladeknapper</h4>
                         <p class="px-lg-2">1 pose.</p>
@@ -87,7 +87,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/ChocoCloud.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Choco Cloud</h4>
                         <p class="px-lg-2">10 stk.</p>
@@ -103,7 +103,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Mælkechokolade</h4>
                         <p class="px-lg-2">12 stk.</p>
