--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -72,7 +72,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/FyldteChokoEksklusiv.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
                         <p class="px-lg-2">24 stk.</p>
@@ -88,7 +88,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Chocobombs.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Choco Bomb</h4>
                         <p class=" px-lg-2">4 stk.</p>
@@ -104,7 +104,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Gaveæske.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Gaveæske</h4>
                         <p class=" px-lg-2">1 stk.</p>
