--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -71,7 +71,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Chokoladefontæne.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Lej en Chokoladefontæne</h4>
                         <p class="px-lg-2">1 stk.</p>
@@ -87,9 +87,9 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/Jordbær.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
-                        <h4 class="produkttekst py-3 px-lg-2">Chokoladeovertrukne jordbær</h4>
+                        <h4 class="produkttekst py-3 px-lg-2">Overtrukne jordbær</h4>
                         <p class=" px-lg-2">8 stk.</p>
                     </div>
 
@@ -103,7 +103,7 @@
             <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/FyldteChokolader.png" class="card-img-top px-lg-2" alt="chokolade">
 
-                <div class="row">
+                <div class="row py-2">
                     <div class="col-7 produkttekst">
                         <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
                         <p class="px-lg-2">18 stk.</p>
