--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -65,7 +65,7 @@
     </p>
 </div>
 
-<div class="card-group px-3 px-lg-5 py-5">
+<div class="card-group px-3 px-lg-5 pb-5 pt-3">
     <div class="row g-3">
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
