--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
             <div class="card border-0 position-relative">
                 <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENEHDER</span></a>
+                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENHEDER</span></a>
             </div>
         </div>
     </div>
