Ændret font på alle undersidder og rettet font styling på kontaktformen

--- a/kontaktform.html
+++ b/kontaktform.html
@@ -88,7 +88,7 @@
                 <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:300px"></textarea>
             </div>
             <div class="col-12 kontaktform-overskrifter">
-                <input style="text-transform: uppercase" type="submit" class="bg-mørkeBrun" value="Send besked">
+                <input style="text-transform: uppercase" type="submit" value="Send besked">
             </div>
         </div>
     </form>
