Rettet checkout side

--- a/Checkout.html
+++ b/Checkout.html
@@ -67,11 +67,11 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col">
                 <div class="card">
-                    <div class="card-body p-4">
+                    <div class="card-body p-lg-4">
                         <div class="row">
                             <div class="col">
-                                <h5 class="mb-3"><span href="#" class="text-body"><i
-                                        class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
+                                <h5 class="mb-3"><span href="#" class="text-body" style="text-transform: uppercase">
+                                    <i class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
                                 <hr>
                                 <div class="card mb-3">
                                     <div class="card-body">
@@ -145,25 +145,24 @@
 
                             <hr class="my-4">
 
-                            <div class="d-flex justify-content-between" style="font-weight: 600">
+                            <div class="d-flex justify-content-between" style="font-weight: 600; text-transform: uppercase">
                                 <p class="mb-2">Subtotal</p>
                                 <p class="mb-2">400.00 kr</p>
                             </div>
 
-                            <div class="d-flex justify-content-between" style="font-weight: 600">
+                            <div class="d-flex justify-content-between" style="font-weight: 600; text-transform: uppercase">
                                 <p class="mb-2">Click & Collect</p>
                                 <p class="mb-2">0 kr</p>
                             </div>
 
-                            <div class="d-flex justify-content-between mb-4" style="font-weight: 600">
+                            <div class="d-flex justify-content-between mb-4" style="font-weight: 600; text-transform: uppercase">
                                 <p class="mb-2">Total</p>
                                 <p class="mb-2">400.00 kr</p>
                             </div>
 
                             <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
                                 <div class="d-flex justify-content-between">
-                                    <span style="font-size: 18px">400.00 kr</span>
-                                    <span style="font-size: 18px">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                                    <span style="font-size: 18px; text-transform: uppercase;">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                 </div>
                             </button>
                         </div>
