Rettet header størrelse

--- a/Checkout.html
+++ b/Checkout.html
@@ -55,7 +55,7 @@
     </div>
 </nav>
 
-<div class="hero-image">
+<div class="hero-image" style="height: 50%">
 </div>
 
 <div class="TekstForside">
