--- a/kontaktform.html
+++ b/kontaktform.html
@@ -68,7 +68,7 @@
 </div>
 
 <!-- Kontakt form -->
-<div class="container">
+<section class="container">
 
     <form action="">
         <div class="row p-3 px-lg-5 py-lg-5 kontaktformtekst">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </form>
-</div>
+</section>
 
 <!-- Kontakt form slut -->
 
